C++/include/Swelio.h

// Summary:
//     Checks if the Swelio Engine is activated
// Description:
//     This function checks if the Engine already activated using the StartEngine function.
// Return Value:
//     Returns TRUE if the Swelio Engine is active, otherwise returns FALSE.
BOOL WINAPI IsEngineActive();
// Summary:
//      Get number of card readers connected to PC
// Description:
//      Checks how many smart card readers are connected to PC. If there is no readers connected then
//      the usage of the Swelio Engine is not possible. The engine can control the change of the number of the card
//      readers and can raise an event when the reader is connected or disconnected from PC
// Return Value:
//      The number of the connected smart card readers
int  WINAPI GetReadersCount(VOID);
// Summary:
//      Returns the index of the active smart card reader
// Description:
//      The zero-based index of the selected card reader. If there is only one reader is connected
//      to PC then this reader has the index 0 and it's a default (selected) reader.
// Return Value:
//      The index of the selected card reader. The first reader has index 0.
int  WINAPI GetSelectedReaderIndex(void);
// Summary:
//      Returns the length of the reader name 
// Description:
//      Returns the length of the reader name for the smart card reader with specified zero-based index
// Return Value:
//      The length of the reader name
int WINAPI GetReaderNameLenW(int readerNumber);
// Summary:
//		Returns the name of the card reader 
// Description:
//      Returns the name of the card reader with the specified zero-based index
// Arguments:
//		readerNumber - The zero-based index of the card reader
//		strDest - Destination string
//		count - Number of characters to be copied
// Return Value:
//      The character count of the reader name
int WINAPI GetReaderNameW(int readerNumber, LPWSTR strDest, int count);
// Summary:
//     Checks if the card is present in the card reader
// Description:
//     Use isCardPresent function to check if the card is inserted in the card reader or not
// Arguments:
//		readerNumber - The zero-based index of the card reader
// Return Value:
//     Returns TRUE if the card is inserted in the reader, otherwise returns FALSE
BOOL WINAPI IsCardPresentEx(int readerNumber);
// Summary:
//    Returns the zero-based reader index with specified name
// Description:
//    Use this function to get the zero-based index of the card reader with specified name
// Arguments:
//    readerName - The name of the reader
// Return Value:
//    The zero-based reader index
int WINAPI GetReaderIndexW(LPWSTR readerName);
// Summary:
//      Check if Belgian EID card is inserted into card reader
// Description:
//      If the card is inserted in the reader, this function performs the card
//      type check.
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
// Return Value:
//      Returns TRUE, if Belgian eID card is inserted in the reader. If there is
//      no card in the reader or the card of other type is inserted, returns FALSE
BOOL WINAPI IsEIDCardEx(int readerNumber);
// Summary:
//     Calculates buffer size for Base64 encoded photo
// Description:
//     Use this function to calculate the size of the buffer needed for Base64 encoding of the photo
//     This can be useful for including the photo data to the text document, for example to XML file
// Arguments:
//     photo - The pointer to EidPicture structure
// Return Value:
//     The desired size of the buffer
int  WINAPI GetEncodedPhotoSize(PeidPicture photo);
// Summary:
//     Returns the size of the Base64 encoded certificate
// Description:
//    Use this function to calculate the size of the buffer needed to encode the certificate
// Arguments:
//   certificate - The certificate data
// Return value:
//     Returns the size of the buffer needed to hold the encoded certificate
int  WINAPI GetEncodedCertificateSize(PEidCertificate certificate);
// Summary:
//     Reads the certificate from a file
// Description:
//     Use this function to read the certificate from the file
// Arguments:
//     fileName - The source file name
//     certificate - The pointer to EidCertificate structure
void WINAPI LoadCertificateW(LPWSTR fileName, PEidCertificate certificate);
// Summary:
//      Read eID card and save the identity information and address to PNG QR Code file
// Description:
//      Use this function to read the information about the owner of the card and
//      generate the QR Code PNG image 
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
//      fileName - File name to store information
// Return Value:
//      Returns TRUE if the information is retrieved from the card, otherwise returns FALSE
BOOL WINAPI GenerateQRCodeExW(int readerNumber, LPWSTR fileName);
// Summary:
//     Checks if the card owner is male
// Description:
//     Use this function to check the gender of the card owner  
// Arguments:
//     identity - The person identity information structure 
// Return Value:
//     Returns TRUE if the card owner is male, otherwise returns FALSE
BOOL WINAPI IsMaleW(PEidIdentityW identity);
// Summary:
//     Generate authentication signature
// Description:
//     Generate authentication signature using provided hash value 
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
//      pinCode - The card PIN code value
//      dataHash - The hash value buffer
//      hashSize - The size of the hash data buffer
//      signature - The output buffer that contains the generated signature
//      signatureSize - The size of the signature buffer
// Return Value:
//     Returns TRUE if the signature is successfully generated, otherwise returns FALSE
BOOL WINAPI GenerateAuthenticationSignatureExW(int readerNumber, LPWSTR pinCode, BYTE* dataHash, int hashSize, BYTE* signature, LPDWORD signatureSize);
// Summary:
//     Generate non repudiation signature
// Description:
//     Generate non repudiation signature using provided hash value
// Arguments:
//		readerNumber - The zero-based index of the card reader.  
//      pinCode - The card PIN code value
//      dataHash - The hash value buffer
//      hashSize - The size of the hash data buffer
//      signature - The output buffer that contains the generated signature
//      signatureSize - The size of the signature buffer
// Return Value:
//     Returns TRUE if the signature is successfully generated, otherwise returns FALSE
BOOL WINAPI GenerateNonRepudiationSignatureExW(int readerNumber, LPWSTR pinCode, BYTE* dataHash, int hashSize, BYTE* signature, LPDWORD signatureSize);
#define GetReaderNameLen GetReaderNameLenW
#define GetReaderName GetReaderNameW
#define GetReaderIndex GetReaderIndexW
#define LoadCertificate LoadCertificateW
#define IsMale IsMaleW
#define GenerateQRCodeEx GenerateQRCodeExW
#define GetReaderNameLen GetReaderNameLenA
#define GetReaderName GetReaderNameA
#define GetReaderIndex GetReaderIndexA
#define LoadCertificate LoadCertificateA
#define IsMale IsMaleA
#define GenerateQRCodeEx GenerateQRCodeExA