C++/include/FileOperations.h

//   Summary
//   Checks if the file is UNICODE file
//   Description
//   This function checks the file encoding based on BOM (Byte
//   Order Mark).
//   Parameters
//   fileName :  The name of the file
//   Return Value
//   Returns TRUE if file is stored in UNICODE format, otherwise
//   returns FALSE.                                              
BOOL WINAPI IsUnicodeFileW(LPCWSTR fileName);
 //  Summary
 //  Checks if the file is an animated GIF image file
 //  Parameters
 //  fileName :  The name of the file
 //  Return Value
 //  Returns TRUE if the file is an animated GIF image file,
 //  otherwise returns FALSE.                                
BOOL WINAPI IsAnimatedGIFW(LPWSTR fileName);
 //  Summary
 //  Renames the file
 //  Parameters
 //  oldName :  \File to be renamed
 //  newName :  New name of the file
 //  Return Value
 //  Returns TRUE if the file was successfully renamed, otherwise
 //  returns FALSE                                                
BOOL WINAPI FileRenameW(LPWSTR oldName, LPWSTR newName);
 //  Summary
 //  Gets the full path to the file based on file name
 //  Parameters
 //  fileName :  The name of the file
 //  fullName :  The full path to the file             
BOOL WINAPI FullPathW(LPWSTR fileName, LPWSTR fullName);
 //  Summary
 //  Checks if the file or folder with the given name exists
 //  Parameters
 //  fileName :  The file or folder name
 //  Return Value
 //  Returns TRUE if the file or folder exists, otherwise returns
 //  FALSE.                                                       
BOOL WINAPI FileOrFolderExistsW(LPWSTR fileName);
 //  Summary
 //  Verifies that a path is a valid directory.
 //  Description
 //  This function verifies if provided value is the name of the
 //  folder
 //  Return Value
 //  Returns TRUE if the path is a valid directory, or FALSE
 //  otherwise. 
BOOL WINAPI IsDirectoryW(LPWSTR folderName);
 //  Summary
 //  Checks if provided string is a valid file name
 //  Description
 //  Checks if provided string is a valid file name and does not
 //  contain any illegal characters
 //  Parameters
 //  fileName :  The name of the file
 //  Return Value
 //  Returns TRUE if provided string is valid file name, otherwise
 //  returns FALSE                                                 
BOOL WINAPI IsValidFileNameW(LPWSTR fileName);
 //  Summary
 //  Checks if provided string is a valid file path
 //  Description
 //  Checks if provided string is a valid file path and does not
 //  contain any illegal characters
 //  Parameters
 //  fileName :  The file path to check
 //  Return Value
 //  Returns TRUE if provided string is valid file path, otherwise
 //  returns FALSE                                                 
BOOL WINAPI IsValidPathNameW(LPWSTR fileName);
 //  Summary
 //  Calculates the number of files in the given folder
 //  Parameters
 //  folderName :  The name of the folder
 //  Return Value
 //  The number of files in the given folder            
int WINAPI  GetFilesCountW(LPWSTR folderName);
#define IsUnicodeFile			IsUnicodeFileW
#define IsAnimatedGIF			IsAnimatedGIFW
#define FileRename				FileRenameW
#define FullPath				FullPathW
#define FileOrFolderExists		FileOrFolderExistsW
#define IsDirectory				IsDirectoryW
#define IsValidFileName			IsValidFileNameW
#define IsValidPathName			IsValidPathNameW
#define GetFilesCount			GetFilesCountW
#define IsUnicodeFile			IsUnicodeFileA
#define IsAnimatedGIF			IsAnimatedGIFA
#define FileRename				FileRenameA
#define FullPath				FullPathA
#define FileOrFolderExists		FileOrFolderExistsA
#define IsDirectory				IsDirectoryA
#define IsValidFileName			IsValidFileNameA
#define IsValidPathName			IsValidPathNameA
#define GetFilesCount			GetFilesCountA