C++/include/SystemInfo.h

//Checks if PC is running Windows 10 or better
BOOL WINAPI IsWindows10();
//Checks if PC is Running Windows 8 or better
BOOL WINAPI IsWindows8();
//Checks if metro interface is active
BOOL WINAPI IsMetroActive();
//Checks if PC is running Windows 7 or better
BOOL WINAPI IsWindows7();
//Checks if PC is running Windows Vista or better
BOOL WINAPI IsWindowsVista();
//Checks if PC is running Windows XP
BOOL WINAPI IsWindowsXP();
 

//Checks if the system is multi touch ready
BOOL WINAPI IsMultiTouchReady();
//Checks if the application is running on the Tablet PC
BOOL WINAPI IsTabletPC();
//Checks if the Media Center version of Windows is installed
BOOL WINAPI IsMediaCenter();
//Checks if PC is connected to Internet
BOOL WINAPI IsConnectedToInternet();