Swelio.Engine/Swelio.Engine/NativeMethods.cs


        [DllImport(DLL_FILE_NAME, EntryPoint = "FileOrFolderExistsW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileOrFolderExists([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FileRenameW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileRename([MarshalAs(UnmanagedType.LPWStr)] string OldName, [MarshalAs(UnmanagedType.LPWStr)] string NewName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "FullPathW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FullPath([MarshalAs(UnmanagedType.LPWStr)] string fileName, StringBuilder sb);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GenerateBMPW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void GenerateBMP([MarshalAs(UnmanagedType.LPWStr)] string fileName, [MarshalAs(UnmanagedType.LPWStr)] string Text, int Margin, int Size, int Level);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GenerateAuthenticationSignatureExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GenerateAuthenticationSignatureEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string pinCode, byte[] dataHash, int hashSize, byte[] signature, ref int signatureSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GenerateNonRepudiationSignatureExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GenerateNonRepudiationSignatureEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string pinCode, byte[] dataHash, int hashSize, byte[] signature, ref int signatureSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GeneratePNGW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void GeneratePNG([MarshalAs(UnmanagedType.LPWStr)] string fileName, [MarshalAs(UnmanagedType.LPWStr)] string Text, int Margin, int Size, int Level);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GenerateQRCodeExW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GenerateQRCodeEx(int readerNumber, [MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetEncodedCertificateSize", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetEncodedCertificateSize([In, Out] EIDCertificate Certificate);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetEncodedPhotoSize", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetEncodedPhotoSize([In, Out] EIDPicture Photo);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetFilesCountW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetFilesCount([MarshalAs(UnmanagedType.LPWStr)] string FolderName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetHBitmapW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern IntPtr GetHBitmap([MarshalAs(UnmanagedType.LPWStr)] string Text, int Margin, int Size, int Level);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetISOCodeW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetISOCode([MarshalAs(UnmanagedType.LPWStr)] string Nationality, StringBuilder IsoCode, int BufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetMD5", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetMD5(byte[] source, int sourceSize, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetSHA1", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetSHA1(byte[] source, int sourceSize, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetFileSHA1W", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetFileSHA1([MarshalAs(UnmanagedType.LPWStr)] string fileName, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetFileMD5W", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetFileMD5([MarshalAs(UnmanagedType.LPWStr)] string fileName, byte[] buffer, int bufferSize);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetReaderIndexW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetReaderIndex([MarshalAs(UnmanagedType.LPWStr)] string ReaderName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetReaderNameW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetReaderName(int readerNumber, StringBuilder StrDest, int Count);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetReaderNameLenW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetReaderNameLen(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetReadersCount", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetReadersCount();

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetSelectedReaderIndex", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int GetSelectedReaderIndex();

        [DllImport(DLL_FILE_NAME, EntryPoint = "GetStartupW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetStartup([MarshalAs(UnmanagedType.LPWStr)] string AppName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "HibernateWindows", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool HibernateWindows();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsAnimatedGIFW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsAnimatedGIF([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsCardPresentEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsCardPresentEx(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsConnectedToInternet", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsConnectedToInternet();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsDirectoryW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsDirectory([MarshalAs(UnmanagedType.LPWStr)] string FolderName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsEIDCardEx", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsEIDCardEx(int readerNumber);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsEngineActive", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsEngineActive();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsMaleW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsMale([In, Out] EIDIdentity Identity);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsMediaCenter", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsMediaCenter();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsMetroActive", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsMetroActive();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsMultiTouchReady", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsMultiTouchReady();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsTabletPC", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsTabletPC();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsUnicodeFileW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsUnicodeFile([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsValidFileNameW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsValidFileName([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsValidPathNameW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsValidPathName([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsWindows7", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindows7();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsWindows10", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindows10();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsWindows8", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindows8();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsWindowsVista", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindowsVista();

        [DllImport(DLL_FILE_NAME, EntryPoint = "IsWindowsXP", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindowsXP();

        [DllImport(DLL_FILE_NAME, EntryPoint = "LoadCertificateW", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern void LoadCertificate([MarshalAs(UnmanagedType.LPWStr)] string fileName, [In, Out] EIDCertificate Certificate);
